public/styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap');
/* @import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@300;400;700&display=swap'); */
/* @import url('https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500&display=swap'); */
@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap");

html,
body {
  font-family: 'Comic Neue', cursive;
  /* font-family: "Gaegu", cursive; */
  /* font-family: "Karla", sans-serif; */
  background-color: #fff;
  color: #222;
  font-weight: 200;
  height: 100%;
}

#__next {
  height: 100%;
}

a {
  color: #9b9b9b;
  text-decoration: none;
  transition: color 0.3s ease;
}

a:active,
a:hover {
  color: #000;
}

.youtube-container {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
  overflow: hidden;
  margin-bottom: 50px;
}

.youtube-container iframe {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

#logo {
  width: 75%;
  max-width: 14rem;
  height: auto;
  display: block;
  float: none;
  margin: auto;
}

#print-bg {
  position: absolute;
  z-index: -1;
  height: 100%;
  min-height: 100vh;
  overflow: hidden;
  top: -6rem;
  width: calc(100vw - 8.5rem);
  left: 50%;
  transform: translateX(-50%);
  font-size: 1rem;
  pointer-events: none;
}

@keyframes fadein {
  0% { opacity: 0 }
  100% { opacity: 1 }
}

#print-bg img {
  position: absolute;
  width: 14rem;
  left: 0;
  /* opacity: 0;
  animation-name: fadein;
  animation-delay: 1s;
  animation-duration: 0.2s;
  animation-fill-mode: forwards; */
}

#print-bg img:nth-child(even) {
  left: auto;
  right: 0;
}

#print-bg .overlay {
  display: block;
  width: 100%;
  height: 100%;
  background-color: rgba(255,255,255,0.7);
  z-index: 1;
  position: relative;
}

@media (min-width: 769px) {
    #print-bg {
      top: -4rem;
      font-size: 0.7rem;
    }
}

@media (min-width: 1100px) {
  #print-bg .overlay {
    display: none;
  }
}

@media (min-width: 1300px) {
  #print-bg {
    width: 1100px;
  }
}

